Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21617

Selected targets revert to "all" if CMake generation fails on project load

    XMLWordPrintable

Details

    • d2e420bfe725d79278a2c22415e5c4682bab77b2 (qt-creator/qt-creator/master)

    Description

      If CMake generation fails when you load a project, all selected targets, including the clean target, get reset to "all".

       

      Reproduction steps:

      1. Load a CMake project in Qt Creator and select a target other than "all" under "Build Steps".
      2. Make a change to CMakeLists.txt that will cause it to fail to run.
      3. Close the project and re-open it in Qt Creator. CMake should fail during this step.
      4. Fix CMakeLists.txt so it will generate successfully and re-run CMake within Qt Creator.
      5. Go to the project build settings. Notice both the selected target under "Build Steps" as well as the clean step under "Clean Steps" are set to build the "all" target.

       

      When users experience this, it will likely go unnoticed for some time until they try to clean their project and are confused why it's building instead. When I searched to see if this bug had already been reported I noticed a multiple reports about cleaning building instead, and most likely this has been the cause each time.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            akb825 Aaron Barany
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes